include/grx-3.0.h

typedef struct _GrxFrame        GrxFrame;
/* ================================================================== */
/*                        SYSTEM TYPE DEF's                           */
/* ================================================================== */

/* need unsigned 32 bit integer for color stuff */
typedef guint32 GrxColor;
/*
 * color table (for primitives using several colors):
 *   it is an array of colors with the first element being
 *   the number of colors in the table
 */
typedef GrxColor *GrColorTableP;
typedef struct _GR_textOption {         /* text drawing option structure */
        struct _GR_font     *txo_font;      /* font to be used */
        union  _GR_textColor txo_fgcolor;   /* foreground color */
        union  _GR_textColor txo_bgcolor;   /* background color */
        char    txo_chrtype;                /* character type (see above) */
        char    txo_direct;                 /* direction (see above) */
        char    txo_xalign;                 /* X alignment (see above) */
        char    txo_yalign;                 /* Y alignment (see above) */
} GrTextOption;
/* ================================================================== */
/*            THICK AND DASHED LINE DRAWING PRIMITIVES                */
/* ================================================================== */

/*
 * custom line option structure
 *   zero or one dash pattern length means the line is continuous
 *   the dash pattern always begins with a drawn section
 */
typedef struct {
        GrxColor lno_color;                  /* color used to draw line */
        int     lno_width;                  /* width of the line */
        int     lno_pattlen;                /* length of the dash pattern */
        unsigned char *lno_dashpat;         /* draw/nodraw pattern */
} GrLineOption;
void GrCustomLine(int x1,int y1,int x2,int y2,const GrLineOption *o);
void GrCustomBox(int x1,int y1,int x2,int y2,const GrLineOption *o);
void GrCustomCircle(int xc,int yc,int r,const GrLineOption *o);
void GrCustomEllipse(int xc,int yc,int xa,int ya,const GrLineOption *o);
void GrCustomCircleArc(int xc,int yc,int r,int start,int end,int style,const GrLineOption *o);
void GrCustomEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,const GrLineOption *o);
void GrCustomPolyLine(int numpts,int points[][2],const GrLineOption *o);
void GrCustomPolygon(int numpts,int points[][2],const GrLineOption *o);
/* ================================================================== */
/*             PATTERNED DRAWING AND FILLING PRIMITIVES               */
/* ================================================================== */

/*
 * BITMAP: a mode independent way to specify a fill pattern of two
 *   colors. It is always 8 pixels wide (1 byte per scan line), its
 *   height is user-defined. SET THE TYPE FLAG TO ZERO!!!
 */
typedef struct _GR_bitmap {
        int     bmp_ispixmap;               /* type flag for pattern union */
        int     bmp_height;                 /* bitmap height */
        char   *bmp_data;                   /* pointer to the bit pattern */
        GrxColor bmp_fgcolor;                /* foreground color for fill */
        GrxColor bmp_bgcolor;                /* background color for fill */
        int     bmp_memflags;               /* set if dynamically allocated */
} GrBitmap;
/*
 * PIXMAP: a fill pattern stored in a layout identical to the video RAM
 *   for filling using 'bitblt'-s. It is mode dependent, typically one
 *   of the library functions is used to build it. KEEP THE TYPE FLAG
 *   NONZERO!!!
 */
typedef struct _GR_pixmap {
        int     pxp_ispixmap;               /* type flag for pattern union */
        int     pxp_width;                  /* pixmap width (in pixels)  */
        int     pxp_height;                 /* pixmap height (in pixels) */
        GrxColor pxp_oper;                   /* bitblt mode (SET, OR, XOR, AND, IMAGE) */
        GrxFrame pxp_source;                /* source context for fill */
} GrPixmap;
/*
 * Fill pattern union -- can either be a bitmap or a pixmap
 */
typedef union _GR_pattern {
        int      gp_ispixmap;               /* nonzero for pixmaps */
        GrBitmap gp_bitmap;                 /* fill bitmap */
        GrPixmap gp_pixmap;                 /* fill pixmap */
} GrPattern;
/*
 * Draw pattern for line drawings -- specifies both the:
 *   (1) fill pattern, and the
 *   (2) custom line drawing option
 */
typedef struct {
        GrPattern     *lnp_pattern;         /* fill pattern */
        GrLineOption  *lnp_option;          /* width + dash pattern */
} GrLinePattern;
GrPattern *GrBuildPixmap(const char *pixels,int w,int h,const GrColorTableP colors);
GrPattern *GrBuildPixmapFromBits(const char *bits,int w,int h,GrxColor fgc,GrxColor bgc);
void GrDestroyPattern(GrPattern *p);
void GrPatternedLine(int x1,int y1,int x2,int y2,GrLinePattern *lp);
void GrPatternedBox(int x1,int y1,int x2,int y2,GrLinePattern *lp);
void GrPatternedCircle(int xc,int yc,int r,GrLinePattern *lp);
void GrPatternedEllipse(int xc,int yc,int xa,int ya,GrLinePattern *lp);
void GrPatternedCircleArc(int xc,int yc,int r,int start,int end,int style,GrLinePattern *lp);
void GrPatternedEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrLinePattern *lp);
void GrPatternedPolyLine(int numpts,int points[][2],GrLinePattern *lp);
void GrPatternedPolygon(int numpts,int points[][2],GrLinePattern *lp);
void GrPatternFilledPlot(int x,int y,GrPattern *p);
void GrPatternFilledLine(int x1,int y1,int x2,int y2,GrPattern *p);
void GrPatternFilledBox(int x1,int y1,int x2,int y2,GrPattern *p);
void GrPatternFilledCircle(int xc,int yc,int r,GrPattern *p);
void GrPatternFilledEllipse(int xc,int yc,int xa,int ya,GrPattern *p);
void GrPatternFilledCircleArc(int xc,int yc,int r,int start,int end,int style,GrPattern *p);
void GrPatternFilledEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrPattern *p);
void GrPatternFilledConvexPolygon(int numpts,int points[][2],GrPattern *p);
void GrPatternFilledPolygon(int numpts,int points[][2],GrPattern *p);
void GrPatternFloodFill(int x, int y, GrxColor border, GrPattern *p);
void GrPatternDrawChar(int chr,int x,int y,const GrTextOption *opt,GrPattern *p);
void GrPatternDrawString(void *text,int length,int x,int y,const GrTextOption *opt,GrPattern *p);
void GrPatternDrawStringExt(void *text,int length,int x,int y,const GrTextOption *opt,GrPattern *p);
#define GrImage GrPixmap
/* Flags for GrImageInverse() */

#define GR_IMAGE_INVERSE_LR  0x01  /* inverse left right */
#define GR_IMAGE_INVERSE_TD  0x02  /* inverse top down */
GrImage *GrImageBuild(const char *pixels,int w,int h,const GrColorTableP colors);
void     GrImageDestroy(GrImage *i);
GrImage *GrImageBuildUsedAsPattern(const char *pixels,int w,int h,const GrColorTableP colors);
#define GrImageBuildUsedAsPattern(pixels,w,h,colors) \
        (GrImage *)GrBuildPixmap(pixels,w,h,colors);
#define GrImageDestroy(i)   \
          GrDestroyPattern((GrPattern *)(i));