bindings/vala/grx-3.0.vapi


    /* ================================================================== */
    /*            THICK AND DASHED LINE DRAWING PRIMITIVES                */
    /* ================================================================== */

    /**
     * Custom line option structure.
     *
     * Zero or one dash pattern length means the line is continuous.
     * The dash pattern always begins with a drawn section.
     */
    [CCode (cname = "GrLineOption", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class LineOption {
        [CCode (cname = "GrLineOption", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        /**
         * Color used to draw line.
         */
        [CCode (cname = "lno_color")]
        public Color color;

        /**
         * Width of the line.
         */
        [CCode (cname = "lno_width")]
        public int width;

        [CCode (cname = "g_malloc0")]
        public LineOption (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
        /**
         * Draw/no-draw pattern.
         */
        [CCode (cname = "lno_dashpat", array_length_cname = "lno_pattlen")]
        public uchar[] dashpat;
    }

    [CCode (cname = "", destroy_function = "", has_type_id = false)]
    public struct Point {
        int x;
        int y;
    }

    [CCode (cname = "GrCustomLine")]
    public void custom_line(int x1, int y1, int x2, int y2, LineOption o);
    [CCode (cname = "GrCustomBox")]
    public void custom_box(int x1, int y1, int x2, int y2, LineOption o);
    [CCode (cname = "GrCustomCircle")]
    public void custom_circle(int xc, int yc, int r, LineOption o);
    [CCode (cname = "GrCustomEllipse")]
    public void custom_ellipse(int xc, int yc, int xa, int ya, LineOption o);
    [CCode (cname = "GrCustomCircleArc")]
    public void custom_circle_arc(int xc, int yc, int r, int start, int end, ArcStyle style, LineOption o);
    [CCode (cname = "GrCustomEllipseArc")]
    public void custom_ellipse_arc(int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, LineOption o);
    [CCode (cname = "GrCustomPolyLine")]
    public void custom_poly_line([CCode (array_length_pos = 0.9)]Point[] points, LineOption o);
    [CCode (cname = "GrCustomPolygon")]
    public void custom_polygon([CCode (array_length_pos = 0.9)]Point[] points, LineOption o);

    /* ================================================================== */
    /*             PATTERNED DRAWING AND FILLING PRIMITIVES               */
    /* ================================================================== */

    /**
     * A mode independent way to specify a fill pattern of two colors.
     *
     * It is always 8 pixels wide (1 byte per scan line), its height is
     * user-defined. SET THE TYPE FLAG TO ZERO!!!
     */
    [CCode (cname = "struct _GR_bitmap", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class Bitmap {
        [CCode (cname = "struct _GR_bitmap", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        /**
         * Type flag for pattern union.
         */
        [CCode (cname = "bmp_ispixmap")]
        public bool is_pixmap;

        /**
         * Bitmap height
         */
        [CCode (cname = "bmp_height")]
        public int height;

        /**
         * Pointer to the bit pattern
         */
        [CCode (cname = "bmp_data")]
        public char *data;

        /**
         * Foreground color for fill
         */
        [CCode (cname = "bmp_fgcolor")]
        public Color fg_color;

        /**
         * background color for fill
         */
        [CCode (cname = "bmp_bgcolor")]
        public Color bg_color;

        [CCode (cname = "g_malloc0")]
        public Bitmap (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));

        /**
         * Set if dynamically allocated
         */
        [CCode (cname = "bmp_memflags")]
        public int flags;
    }

    /**
     * A fill pattern stored in a layout identical to the video RAM for filling
     * using 'bitblt'-s.
     *
     * It is mode dependent, typically one of the library functions is used to
     * build it. KEEP THE TYPE FLAG NONZERO!!!
     */
    [CCode (cname = "struct _GR_pixmap", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class Pixmap {
        [CCode (cname = "struct _GR_pixmap", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        [CCode (cname = "pxp_ispixmap")]
        public bool is_pixmap;               /* type flag for pattern union */
        [CCode (cname = "pxp_width")]
        public int width;                  /* pixmap width (in pixels)  */
        [CCode (cname = "pxp_height")]
        public int height;                 /* pixmap height (in pixels) */
        [CCode (cname = "pxp_oper")]
        public ColorMode operator;                   /* bitblt mode (SET, OR, XOR, AND, IMAGE) */
        [CCode (cname = "&self->pxp_source")]
        public static Frame pxp_source;        /* source context for fill */

        [CCode (cname = "g_malloc0")]
        public Pixmap (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }

    /**
     * Fill pattern union -- can either be a bitmap or a pixmap
     */
    [CCode (cname = "GrPattern", free_function = "GrDestroyPattern", has_type_id = false)]
    [Compact]
    public class Pattern {
        [CCode (cname = "gp_ispixmap")]
        public bool is_pixmap;               /* nonzero for pixmaps */

        [CCode (cname = "GrBuildPixmap")]
        public Pattern.buildPixmap ([CCode (array_length = false)]char *pixels, int w, int h, ColorTable colors);
        [CCode (cname = "GrBuildPixmapFromBits")]
        public Pattern.buildPixmapFromBits ([CCode (array_length = false)]char *bits, int w, int h, Color fgc, Color bgc);
    }

    /**
     * Draw pattern for line drawings.
     *
     * Specifies both the:
     * 1. Fill pattern, and the
     * 2. Custom line drawing option
     */
    [CCode (cname = "GrLinePattern", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class LinePattern {
        [CCode (cname = "GrLinePattern", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        /**
         * Fill pattern
         */
        [CCode (cname = "lnp_pattern")]
        Pattern pattern;
        /**
         * width + dash pattern
         */
        [CCode (cname = "lnp_option")]
        LineOption option;

        [CCode (cname = "g_malloc0")]
        public LinePattern (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }

    [CCode (cname = "GrPatternedLine")]
    public void patterned_line (int x1, int y1, int x2, int y2, LinePattern line_pattern);
    [CCode (cname = "GrPatternedBox")]
    public void patterned_box  (int x1, int y1, int x2, int y2, LinePattern line_pattern);
    [CCode (cname = "GrPatternedCircle")]
    public void patterned_circle (int xc, int yc, int r, LinePattern line_pattern);
    [CCode (cname = "GrPatternedEllipse")]
    public void patterned_ellipse (int xc, int yc, int xa, int ya, LinePattern line_pattern);
    [CCode (cname = "GrPatternedCircleArc")]
    public void patterned_circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, LinePattern line_pattern);
    [CCode (cname = "GrPatternedEllipseArc")]
    public void patterned_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, LinePattern line_pattern);
    [CCode (cname = "GrPatternedPolyLine")]
    public void patterned_poly_line ([CCode (array_length_pos = 0.9)]Point[] points, LinePattern line_pattern);
    [CCode (cname = "GrPatternedPolygon")]
    public void patterned_polygon ([CCode (array_length_pos = 0.9)]Point[] points, LinePattern line_pattern);

    [CCode (cname = "GrPatternFilledPlot")]
    public void pattern_filled_plot (int x, int y, Pattern pattern);
    [CCode (cname = "GrPatternFilledLine")]
    public void pattern_filled_line (int x1, int y1, int x2, int y2, Pattern pattern);
    [CCode (cname = "GrPatternFilledBox")]
    public void pattern_filled_box (int x1, int y1, int x2, int y2, Pattern pattern);
    [CCode (cname = "GrPatternFilledCircle")]
    public void pattern_filled_circle (int xc, int yc, int r, Pattern pattern);
    [CCode (cname = "GrPatternFilledEllipse")]
    public void pattern_filled_ellipse (int xc, int yc, int xa, int ya, Pattern pattern);
    [CCode (cname = "GrPatternFilledCircleArc")]
    public void pattern_filled_circle_arc (int xc, int yc, int r, int start, int end, int style, Pattern pattern);
    [CCode (cname = "GrPatternFilledEllipseArc")]
    public void pattern_filled_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, int style, Pattern pattern);
    [CCode (cname = "GrPatternFilledConvexPolygon")]
    public void pattern_filled_convex_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Pattern pattern);
    [CCode (cname = "GrPatternFilledPolygon")]
    public void pattern_filled_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Pattern pattern);
    [CCode (cname = "GrPatternFloodFill")]
    public void pattern_flood_fill (int x, int y, Color border, Pattern pattern);

    [CCode (cname = "GrPatternDrawChar")]
    public void pattern_draw_char (int chr, int x, int y, TextOption opt, Pattern pattern);
    [CCode (cname = "GrPatternDrawString")]
    public void pattern_draw_string (void *text, int length, int x, int y, TextOption opt, Pattern pattern);
    public void pattern_draw_vala_string (string text, int x, int y, TextOption opt, Pattern pattern) {
        pattern_draw_string (text.data, text.length, x, y, opt, pattern);
    }
    [CCode (cname = "GrPatternDrawStringExt")]
    public void pattern_draw_string_ext (void *text, int length, int x, int y, TextOption opt, Pattern pattern);
    public void pattern_draw_vala_string_ext (string text, int x, int y, TextOption opt, Pattern pattern) {
        pattern_draw_string_ext (text.data, text.length, x, y, opt, pattern);
    }

    /* ================================================================== */
    /*                      IMAGE MANIPULATION                            */
    /* ================================================================== */


    /**
     * Flags for {@link Image.inverse}.
     */
    [CCode (cname = "int", has_type_id = false)]
    [Flags]
    public enum ImageInverseFlag {
        [CCode (cname = "GR_IMAGE_INVERSE_LR")]
        LEFT_RIGHT, /* inverse left right */
        [CCode (cname = "GR_IMAGE_INVERSE_TD")]
        TOP_DOWN /* inverse top down */
    }

    [CCode (cname = "GrImage", free_function = "GrImageDestroy", has_type_id = false)]
    [Compact]
    public class Image {
        [CCode (cname = "GrImage", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        [CCode (cname = "lnp_pattern")]
        Pattern pattern;         /* fill pattern */
        [CCode (cname = "lnp_option")]
        LineOption option;          /* width + dash pattern */

        [CCode (cname = "GrImageBuild")]
        public Image ([CCode (array_length = false)]char[] pixels, int w, int h, ColorTable colors);
        [CCode (cname = "GrImageBuildUsedAsPattern")]
        public Image.used_as_pattern ([CCode (array_length = false)]char[] pixels, int w, int h, ColorTable colors);
